# cc-history-viewer

./: .gitignore  LICENSE  README.md  Rust工具链安装指南.md  index.html  package.json  pnpm-lock.yaml  settings.example.json  tsconfig.json  vite.config.ts  可行性分析与技术栈选型.md  开发文档.md  技术栈总览.md
scripts/: gen-icons.mjs
src/: App.tsx  index.css  main.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_parser.rs  commands.rs  export.rs  indexer.rs  lib.rs  main.rs  models.rs  parser.rs  pricing.rs  state.rs
src-tauri/tests/: codex_golden.rs  golden.rs  merged_index.rs  real_data_smoke.rs
src-tauri/tests/fixtures/: f1e2d3c4-aaaa-bbbb-cccc-000000000001.jsonl  sample_history.jsonl
src-tauri/tests/fixtures/codex/: README.md  history.jsonl
src-tauri/tests/fixtures/codex/archived_sessions/: synthetic-archived.jsonl
src-tauri/tests/fixtures/codex/cases/: rollout-mixed.jsonl
src-tauri/tests/fixtures/codex/sessions/2026/07/14/: rollout-subagent.jsonl
src-tauri/tests/fixtures/codex/sessions/2026/07/15/: rollout-distinct-same-usage.jsonl  rollout-fork-copy.jsonl  rollout-fork-original.jsonl
src-tauri/tests/fixtures/codex/sessions/2026/07/16/: rollout-legacy.jsonl
src-tauri/tests/fixtures/codex/sessions/2026/07/17/: rollout-current.jsonl
src/components/: AgentBadge.tsx  Charts.tsx  Highlight.tsx  Layout.tsx  PromptCard.tsx  PromptList.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  StatsOverview.tsx  ThemeToggle.tsx  TokenStats.tsx  ui.tsx
src/hooks/: queries.ts  (+2 more)
(+11 files in other folders)
