[package]
name = "cc-history-viewer"
version = "0.6.0"
description = "Local history viewer for Claude Code and OpenAI Codex"
authors = ["xzl"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cc_history_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }
rayon = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
